--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "cryptocurrencies-dashboard",
+  "name": "cryptocurrencies-prices-dashboard",
   "version": "0.1.0",
+  "author": "ignacioceaglio@protonmail.com",
+  "homepage": "---",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,5 +13,16 @@
     "next": "10.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "eslint": "*",
+    "prettier": "*",
+    "babel-eslint": "*",
+    "eslint-config-prettier": "*",
+    "eslint-plugin-react": "*",
+    "gh-pages": "^2.2.0"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
