--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "coingecko-api": "^1.0.10",
     "next": "10.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
