--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export && touch out/.nojekyll",
     "start": "next start"
   },
   "dependencies": {
